--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 						<a href="about.html" class="nav-menu-link">о фильме</a>
 					</li>
 					<li class="nav-menu-item">
-						<a href="trailer.html" class="nav-menu-link">трейлер</a>
+						<a href="#" class="nav-menu-link">трейлер</a>
 					</li>
 					<li class="nav-menu-item">
-						<a href="actors.html" class="nav-menu-link">актеры</a>
+						<a href="#" class="nav-menu-link">актеры</a>
 					</li>
 					<li class="nav-menu-item">
-						<a href="premier.html" class="nav-menu-link">премьера</a>
+						<a href="#" class="nav-menu-link">премьера</a>
 					</li>
 				</ul>
 			</nav>
@@ -51,7 +51,7 @@
 					<img src="img/play.svg" alt="icon: play" class="button-icon">
 					<span class="button-text">смотреть трейлер</span>
 				</a>
-				<a href="trailer.html" class="button button-link">
+				<a href="#" class="button button-link">
 					<img src="img/ticket.svg" alt="icon: ticket" class="button-icon">
 					<span class="button-text">билеты на премьеру</span>
 				</a>
